# expense_bot

./: .env.example  .gitignore  README.md  alembic.ini  app.py  config.py  database.py  docker-compose.yml  keyboards.py  pyproject.toml  requirements.txt  states.py  test.py
alembic/: env.py
alembic/versions/: 20260222_0001_init_tables.py  20260222_0002_add_import_fields_to_transactions.py  20260222_0003_autocategorization_rules_engine.py  20260222_0004_multi_accounts_transfers.py  20260222_0005_balances_and_status.py  20260222_0006_transaction_source_and_import_link.py
app/: main.py
app/api/: accounts.py  categories.py  imports.py  pages.py  reports.py  rules.py  transactions.py  transfers.py
app/db/: seed.py  session.py  settings.py
app/models/: __init__.py  account.py  category.py  category_rule.py  enums.py  statement_import.py  transaction.py
app/schemas/: __init__.py  account.py  category.py  imports.py  report.py  rule.py  transaction.py  transfer.py
app/services/: accounts.py  balance_service.py  categorization_service.py  month.py  pdf_import_service.py  quick_add.py  reporting.py  transactions.py  transfer_matcher.py
app/templates/: index.html
handlers/: __init__.py  balance.py  deposit.py  expense.py  start.py
tests/: test_categorization_service.py  test_pdf_import_service.py  test_quick_add_parser.py  test_transfer_matching.py
